[gd_scene load_steps=2 format=3 uid="uid://d27rlnscs60pg"]

[ext_resource type="Script" uid="uid://cgcstvmekpt0m" path="res://ui/settings/settings_window.gd" id="1_agurt"]

[node name="SettingsWindow" type="Window"]
transparent_bg = true
title = "Settings"
position = Vector2i(0, 36)
size = Vector2i(600, 450)
exclusive = true
transparent = true
script = ExtResource("1_agurt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 120

[node name="SettingsList" type="ItemList" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingsContainer" type="Control" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Close"
